==> crackerland/picoclock-proto/platform/pico/QMI8658/QMI8658.c <==
#include "QMI8658.h"
#define QMI8658_SLAVE_ADDR_L 0x6a
#define QMI8658_SLAVE_ADDR_H 0x6b
#define QMI8658_printf printf
#define QMI8658_UINT_MG_DPS
#define IMU_INT1_GPIO_PIN 23
#define IMU_INT2_GPIO_PIN 24
#define STATUS1_WOM 0b100
#define STATUS1_CTRL9 0b0

void DEV_I2C_Write_Byte(uint8_t addr, uint8_t reg, uint8_t Value)
{
    uint8_t data[2] = {reg, Value};
    i2c_write_blocking(I2C_PORT, addr, data, 2, false);
}

void DEV_I2C_Read_nByte(uint8_t addr, uint8_t reg, uint8_t *pData, uint32_t Len)
{
    i2c_write_blocking(I2C_PORT, addr, &reg, 1, true);
    i2c_read_blocking(I2C_PORT, addr, pData, Len, false);
}

void QMI8658_enableWakeOnMotion(void)
{
	// QMI8658C doc 9.4 "Configuration Procedure":
	// The host processor is responsible for all configurations
	// necessary to put the QMI8658C into WoM mode. The
	// specific sequence of operations performed by the host
	// processor to enable WoM is shown in Figure 10
	// (Figure 10)
	// 1. [Disable sensors. (Write 0x00 to CTRL7)]
	// 2. [Set Accelerometer sample rate and scale (Write CTRL2)]
	// 3. [Set Wake on Motion (WoM) Threshold in CAL1_L; select interrupt, polarity and blanking time in CAL1_H]
	// 4. [Execute CTRL9 command to configure WoM mode]
	// 5. [Set Accelerometer enable bit in CTRL7]

	// 1. Disable sensors.
	QMI8658_enableSensors(QMI8658_CTRL7_DISABLE_ALL);

	// 2. Set accelerometer sample rate and scale.
	QMI8658_config_acc(QMI8658AccRange_2g, QMI8658AccOdr_LowPower_21Hz, QMI8658Lpf_Disable, QMI8658St_Disable);

	// 3. (A) Set wake on motion threshold.
	enum QMI8658_WakeOnMotionThreshold threshold = QMI8658WomThreshold_low;

	// WoM Threshold: absolute value in mg (with 1mg/LSB resolution).
	QMI8658_write_reg(QMI8658Register_Cal1_L, (unsigned char)QMI8658WomThreshold_low); 

	// 3. (B) Select interrupt, polarity, and blanking time.
	const unsigned char blankingTimeMask = 0b00111111;

	// CAL1_H register:
	// 7:6 Interrupt select
	// 0:5 Interrupt blanking time (in number of accelerometer samples)
	// ------
	// Setting interrupt select to 00 - INT1 with initial value 0.
	// Setting blanking time to 4 samples.
	QMI8658_write_reg(
		QMI8658Register_Cal1_H, 
		(unsigned char)QMI8658_Int1 | (unsigned char)QMI8658State_low | (0x04 & blankingTimeMask));

	// 4. Enable WOM through the matching CTRL9 command.
	QMI8658_write_reg(QMI8658Register_Ctrl9, QMI8658_Ctrl9_Cmd_WoM_Setting);

	sleep_ms(5);
	printf("WOM enabled\n");
	QMI8658_enableSensors(QMI8658_CTRL7_ACC_ENABLE);
	sleep_ms(100);
	//uint8_t r;
	//QMI8658_read_reg(QMI8658Register_Status1,&r,1);
	//printf("Status1: %02x\n",r);


	// IRQ GPIO23 / gpio_callback()
	//while(1){
	//	QMI8658_read_reg(QMI8658Register_Status1,&womCmd[0],1);
	//	printf("%02x\n",womCmd[0]);
	//	if(womCmd[0]&QMI8658_STATUS1_WAKEUP_EVENT){ break; }
	//	sleep_ms(100);
	//}
	//QMI8658_disableWakeOnMotion();

}
